Refactored mechanisms and utils, transitioned to state-based logic.
- Deleted numerous outdated mechanisms, actions, opmodes, and utilities, including `pedroPathing` and old test files.
- Refactored `Scheduler` for parallel mechanism initialization and simplified execution flow.
- Reworked `PhantomOpMode` to use a state-based, multi-threaded structure, removing manual hardware loops and telemetry management.
- Updated `Robot` enum to a centralized, thread-safe data and device manager, removing direct hardware access and static data maps.
- Modified `Mechanism` interface, removing the `read()` method.
- Replaced `ShooterMechanism`, `SpinMechanism`, and parts of `CaptureMechanism` with new `LaunchMechanism` and `StandingMechanism`.
- Introduced new state enums (`OpModeStates`, `CapturingState`, `RevolverStates`, etc.) to manage robot behavior.
- Added new state-driven actions (`CaptureStateSwap`, `CaptureGamepad`) for handling capture and revolver logic.
- Simplified `PhantomMath` by removing voltage compensation from the CR servo power calculation.
- Re-implemented `CaptureMechanism` with a simplified state-based approach.